chore(sagsin-network): add seeding data